# drf-theatre-service

./: .dockerignore  .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
accounts/: admin.py  models.py  urls.py
accounts/migrations/: 0001_initial.py  0002_alter_user_options_user_date_joined_user_first_name_and_more.py
base/: mixins.py  models.py
config/: settings.py  urls.py
nginx/: nginx.conf
payments/: admin.py  models.py  schemas.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_payment_checkout_url.py  0003_payment_updated_at_alter_payment_reservation.py
payments/services/: base.py  factory.py  stripe.py
reservations/: admin.py  models.py  schemas.py  serializers.py  urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_reservation_updated_at.py
reservations/tests/: test_views.py
theatre/: admin.py  filters.py  models.py  schemas.py  serializers.py  urls.py  views.py
theatre/migrations/: 0001_initial.py  0002_zone_zoneprice_performance_zones_and_more.py  0003_ticket.py  0004_remove_ticket_price.py  0005_alter_genre_name.py  0006_play_poster.py
theatre/tests/: test_views.py
